started ICP work

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,22 @@
-.~lock.*#
+# Various IDEs and Editors
+.vscode/
+.idea/
+**/*~
+
+# Mac OSX temporary files
+.DS_Store
+**/.DS_Store
+
+# dfx temporary files
+.dfx/
+.mops/
+
+# generated files
+src/declarations/
+
+# frontend code
+node_modules/
+dist/
+
+# environment variables
+.env
