--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "salaries_science_frontend",
+  "name": "salaries_frontend",
   "version": "0.2.0",
   "description": "Internet Computer starter application",
   "keywords": [
