--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "dependencies": {
     "@dfinity/agent": "^0.15.6",
     "@dfinity/candid": "^0.15.6",
-    "@dfinity/principal": "^0.15.6"
+    "@dfinity/principal": "^0.15.6",
+    "@vitejs/plugin-react": "^4.7.0",
+    "vite-plugin-environment": "^1.1.3"
   },
   "devDependencies": {
     "assert": "2.0.0",
