--- a/science-grants-blockchain/package.json
+++ b/science-grants-blockchain/package.json
@@ -26,11 +26,13 @@
     "@dfinity/principal": "0.20.2",
     "@types/react": "18.2.45",
     "@types/react-dom": "18.2.18",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "4.2.1",
     "autoprefixer": "10.4.16",
     "postcss": "8.4.33",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-router-dom": "^7.7.1",
     "tailwindcss": "3.4.0",
     "typescript": "5.3.3",
     "vite": "5.0.10"
